--- a/ErgoSupport/App_Data/umbraco.config
+++ b/ErgoSupport/App_Data/umbraco.config
@@ -1,9 +1,11 @@
-<?xml version="1.0" encoding="utf-16"?>
-<!DOCTYPE root [<!ELEMENT Textpage ANY>
-<!ATTLIST Textpage id ID #REQUIRED>
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE root [ 
 <!ELEMENT Home ANY>
 <!ATTLIST Home id ID #REQUIRED>
- 
+<!ELEMENT Master ANY>
+<!ATTLIST Master id ID #REQUIRED>
+<!ELEMENT Textpage ANY>
+<!ATTLIST Textpage id ID #REQUIRED>
 
 ]>
 <root id="-1">
